--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,13 +8,25 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".Jeu"
+            android:name="com.example.user.dominos.Jeu"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.example.user.dominos.LaunchActivity"
+            android:label="@string/title_activity_launch" >
+        </activity>
+        <activity
+            android:name="com.example.user.dominos.ThemeActivity"
+            android:label="@string/title_activity_theme" >
+        </activity>
+        <activity
+            android:name="com.example.user.dominos.NiveauActivity"
+            android:label="@string/title_activity_niveau" >
         </activity>
     </application>
 
